--- a/HttpServer/HttpServer.csproj
+++ b/HttpServer/HttpServer.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="xcopy &quot;$(SolutionDir)HttpServer\web&quot; &quot;$(SolutionDir)HttpServer\bin\$(Configuration)\netcoreapp2.1\root\web\&quot; /s /e" />
+    <Exec Command="xcopy &quot;$(SolutionDir)HttpServer\web&quot; &quot;$(SolutionDir)HttpServer\bin\$(Configuration)\netcoreapp2.1\root\web\&quot; /s /e /y" />
   </Target>
 
 </Project>
