--- a/HttpServer/HttpServer.csproj
+++ b/HttpServer/HttpServer.csproj
@@ -25,6 +25,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="storage\" />
+  </ItemGroup>
+
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="xcopy &quot;$(SolutionDir)HttpServer\web&quot; &quot;$(SolutionDir)HttpServer\bin\$(Configuration)\netcoreapp2.1\root\web\&quot; /s /e /y" />
   </Target>
