--- a/HttpServer/HttpServer.csproj
+++ b/HttpServer/HttpServer.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="visualisationComponents\" />
     <Folder Include="storage\" />
   </ItemGroup>
 
